--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class='todo'>To Do</h1>
 <% @lists.each do |list| %>
   <div class='listitems'>
-    <input  type="checkbox" class="strikethrough" name="" value="" />
+    <input  type="checkbox" class="strikethrough" />
     <%= link_to list.name, list_path(list), class: 'listitem' %>
      <br />
   </div>
