--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,5 +2,5 @@
 <h3><%= @list.description %></h3>
 | <%= link_to 'Back', lists_path, class: 'back' %></a> |
 <%= link_to 'Edit', edit_list_path, class: 'edit' %></a> |
-<%= link_to 'Delete', list_path, method: :delete, class: 'delete' %></a> |
+<%= link_to 'Delete', list_path, method: :delete, class: 'delete', data: {confirm: 'Delete Item: Are you sure?'} %></a> |
 
